@@ -21,7 +21,6 @@ import java.util.HashSet;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Set;
-import java.util.Vector;
 import net.sf.ehcache.Ehcache;
 import net.sf.ehcache.Element;
 import net.sf.ehcache.constructs.blocking.CacheEntryFactory;
@@ -69,8 +68,7 @@ import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 
-/**
- */
+/** */
 @Service("authorizationService")
 public class AuthorizationImpl implements IAuthorizationService {
 
@@ -178,6 +176,7 @@ public class AuthorizationImpl implements IAuthorizationService {
      * @param permissions IPermission[]
      * @exception AuthorizationException
      */
+    @Override
     public void addPermissions(IPermission[] permissions) throws AuthorizationException {
         if (permissions.length > 0) {
             getPermissionStore().add(permissions);
@@ -251,6 +250,7 @@ public class AuthorizationImpl implements IAuthorizationService {
      * @param portletDefinitionId
      * @exception AuthorizationException indicates authorization information could not be retrieved.
      */
+    @Override
     @RequestCache
     public boolean canPrincipalManage(IAuthorizationPrincipal principal, String portletDefinitionId)
             throws AuthorizationException {
@@ -327,6 +327,7 @@ public class AuthorizationImpl implements IAuthorizationService {
      * @param principal IAuthorizationPrincipal
      * @return boolean
      */
+    @Override
     @RequestCache
     public boolean canPrincipalManage(
             IAuthorizationPrincipal principal, PortletLifecycleState state, String categoryId)
@@ -389,6 +390,7 @@ public class AuthorizationImpl implements IAuthorizationService {
      * @param portletDefinitionId
      * @exception AuthorizationException indicates authorization information could not be retrieved.
      */
+    @Override
     @RequestCache
     public boolean canPrincipalRender(IAuthorizationPrincipal principal, String portletDefinitionId)
             throws AuthorizationException {
@@ -432,6 +434,7 @@ public class AuthorizationImpl implements IAuthorizationService {
      * @param portletDefinitionId
      * @exception AuthorizationException indicates authorization information could not be retrieved.
      */
+    @Override
     @RequestCache
     public boolean canPrincipalSubscribe(
             IAuthorizationPrincipal principal, String portletDefinitionId) {
@@ -486,6 +489,7 @@ public class AuthorizationImpl implements IAuthorizationService {
      * @param target java.lang.String
      * @exception AuthorizationException indicates authorization information could not be retrieved.
      */
+    @Override
     @RequestCache
     public boolean doesPrincipalHavePermission(
             IAuthorizationPrincipal principal, String owner, String activity, String target)
@@ -576,6 +580,7 @@ public class AuthorizationImpl implements IAuthorizationService {
      * @param target java.lang.String
      * @exception AuthorizationException indicates authorization information could not be retrieved.
      */
+    @Override
     public IPermission[] getAllPermissionsForPrincipal(
             IAuthorizationPrincipal principal, String owner, String activity, String target)
             throws AuthorizationException {
@@ -607,19 +612,6 @@ public class AuthorizationImpl implements IAuthorizationService {
     }
 
     /**
-     * Does this mean all channels the principal could conceivably subscribe to or all channels
-     * principal is specifically authorized to subscribe to, or what?
-     *
-     * @param principal IAuthorizationPrincipal
-     * @return Vector (of channels?)
-     * @exception AuthorizationException indicates authorization information could not
-     */
-    public Vector getAuthorizedChannels(IAuthorizationPrincipal principal)
-            throws AuthorizationException {
-        return new Vector();
-    }
-
-    /**
      * Returns <code>IAuthorizationPrincipals</code> that have <code>IPermissions</code> for the
      * given owner, activity and target.
      *
@@ -643,6 +635,7 @@ public class AuthorizationImpl implements IAuthorizationService {
      * @return org.apereo.portal.groups.IGroupMember
      * @param principal org.apereo.portal.security.IAuthorizationPrincipal
      */
+    @Override
     public IGroupMember getGroupMember(IAuthorizationPrincipal principal) throws GroupsException {
         return getGroupMemberForPrincipal(principal);
     }
@@ -720,6 +713,7 @@ public class AuthorizationImpl implements IAuthorizationService {
      * @param target java.lang.String
      * @exception AuthorizationException indicates authorization information could not be retrieved.
      */
+    @Override
     public IPermission[] getPermissionsForOwner(String owner, String activity, String target)
             throws AuthorizationException {
         return primRetrievePermissions(owner, null, activity, target);
@@ -739,6 +733,7 @@ public class AuthorizationImpl implements IAuthorizationService {
      * @param target java.lang.String
      * @exception AuthorizationException indicates authorization information could not be retrieved.
      */
+    @Override
     @RequestCache
     public IPermission[] getPermissionsForPrincipal(
             IAuthorizationPrincipal principal, String owner, String activity, String target)
@@ -761,11 +756,12 @@ public class AuthorizationImpl implements IAuthorizationService {
      * @return IAuthorizationPrincipal
      * @param permission IPermission
      */
+    @Override
     public IAuthorizationPrincipal getPrincipal(IPermission permission)
             throws AuthorizationException {
         String principalString = permission.getPrincipal();
         int idx = principalString.indexOf(PRINCIPAL_SEPARATOR);
-        Integer typeId = new Integer(principalString.substring(0, idx));
+        Integer typeId = Integer.valueOf(principalString.substring(0, idx));
         Class type = EntityTypesLocator.getEntityTypes().getEntityTypeFromID(typeId);
         String key = principalString.substring(idx + 1);
         return newPrincipal(key, type);
@@ -804,6 +800,7 @@ public class AuthorizationImpl implements IAuthorizationService {
      *
      * @param principal org.apereo.portal.security.IAuthorizationPrincipal
      */
+    @Override
     public String getPrincipalString(IAuthorizationPrincipal principal) {
         return getPrincipalString(principal.getType(), principal.getKey());
     }
@@ -841,6 +838,7 @@ public class AuthorizationImpl implements IAuthorizationService {
      * @param principal IAuthorizationPrincipal
      * @return org.apereo.portal.security.IPermission
      */
+    @Override
     public IPermission newPermission(String owner, IAuthorizationPrincipal principal) {
         IPermission p = getPermissionStore().newInstance(owner);
         if (principal != null) {
@@ -856,6 +854,7 @@ public class AuthorizationImpl implements IAuthorizationService {
      * @return org.apereo.portal.security.IPermissionManager
      * @param owner java.lang.String
      */
+    @Override
     public IPermissionManager newPermissionManager(String owner) {
         return new PermissionManagerImpl(owner, this);
     }
@@ -868,6 +867,7 @@ public class AuthorizationImpl implements IAuthorizationService {
      * @param key java.lang.String
      * @param type java.lang.Class
      */
+    @Override
     public IAuthorizationPrincipal newPrincipal(String key, Class type) {
         final Tuple<String, Class> principalKey = new Tuple<String, Class>(key, type);
         final Element element = this.principalCache.get(principalKey);
@@ -881,6 +881,7 @@ public class AuthorizationImpl implements IAuthorizationService {
      * @return org.apereo.portal.security.IAuthorizationPrincipal
      * @param groupMember org.apereo.portal.groups.IGroupMember
      */
+    @Override
     public IAuthorizationPrincipal newPrincipal(IGroupMember groupMember) throws GroupsException {
         String key = groupMember.getKey();
         Class type = groupMember.getType();
@@ -901,6 +902,7 @@ public class AuthorizationImpl implements IAuthorizationService {
      * @return org.apereo.portal.security.IUpdatingPermissionManager
      * @param owner java.lang.String
      */
+    @Override
     public IUpdatingPermissionManager newUpdatingPermissionManager(String owner) {
         return new UpdatingPermissionManagerImpl(owner, this);
     }
@@ -1119,6 +1121,7 @@ public class AuthorizationImpl implements IAuthorizationService {
      * @param permissions IPermission[]
      * @exception AuthorizationException
      */
+    @Override
     public void removePermissions(IPermission[] permissions) throws AuthorizationException {
         if (permissions.length > 0) {
             getPermissionStore().delete(permissions);
@@ -1134,6 +1137,7 @@ public class AuthorizationImpl implements IAuthorizationService {
      * @param permissions IPermission[]
      * @exception AuthorizationException
      */
+    @Override
     public void updatePermissions(IPermission[] permissions) throws AuthorizationException {
         if (permissions.length > 0) {
             getPermissionStore().update(permissions);
